bk_ida/gccida/c3/ix86_expand_store_builtin
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12025:33: error: must use 'enum' tag to refer to type 'insn_code'
rtx  ix86_expand_store_builtin( insn_code icode, tree arglist) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12028:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12030:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode1; // [rsp+10h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12031:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0; // [rsp+14h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12035:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg1; // [rsp+28h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12041:33: error: use of undeclared identifier 'insn_data_0'
mode0 = *( ( unsigned __int16 *)insn_data_0[icode].operand + 8); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12042:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v2 = &insn_data_0[icode]; 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12044:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int16 *)&v2->operand[1] + 8)] == MODE_VECTOR_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12045:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int16 *)&v2->operand[1] + 8)] == MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12054:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[icode].operand[1].predicate( op1, mode1) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12054:46: error: called object type '<dependent type>' is not a function or function pointer
if ( !insn_data_0[icode].operand[1].predicate( op1, mode1) ) 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12056:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
pat = insn_data_0[icode].genfun( op0a, op1); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/i386.c:12056:32: error: called object type '<dependent type>' is not a function or function pointer
pat = insn_data_0[icode].genfun( op0a, op1); 
                               ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_store_builtin/src/obj/i386.o] Error 1
